<resources>
    <string name="app_name">AppFAK2FuncionesFirebase</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="valtitulologin">AUTENTICACIÓN A FIREBASE</string>
    <string name="valetemail">Ingrese su email</string>
    <string name="valetpassword">Ingrese su password</string>
    <string name="valbtnloginfirebase">LOGIN FIREBASE</string>
    <string name="errorLoginGoogle">Error en la autenticación con GMAIL</string>
    <string name="facebook_app_id">1317345548627712</string>
    <string name="fb_login_protocol_scheme">fb1317345548627712</string>
    <string name="valcancelloginfb">Canceló la autenticación a Facebook.</string>
    <string name="valerrorloginfb">Error en la autenticación a Facebook.</string>
    <string name="valerrorloginfb2">Error en la autenticación a Facebook.</string>
    <string name="valbtnlogingithub">Autenticación GitHub</string>
    <string name="valactionsalir">SALIR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valbtntomarfoto">TOMAR FOTO</string>
    <string name="valbtnsubirfoto">SUBIR FOTO A CLOUD STORAGE</string>
    <string name="valnavfoto">Foto Storage</string>
    <string name="valnavgaleria">Galeria Storage</string>
    <string name="valnavregistropersona">Registrar Persona</string>
    <string name="valnavlistapersona">Lista Personas</string>
    <string name="valtituloregistro">REGISTRO A CLOUD FIRESTORE</string>
    <string name="valetnombre">Ingrese su nombre</string>
    <string name="valetapellido">Ingrese su apellido</string>
    <string name="valetedad">Ingrese su edad</string>
    <string name="valbtnregistrarfirestore">REGISTRAR CLOUD FIRESTORE</string>


</resources>