<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_foto">
    <fragment
        android:id="@+id/nav_foto"
        android:name="com.qbo.appfak2funcionesfirebase.FotoFragment"
        android:label="@string/valnavfoto"
        tools:layout="@layout/fragment_foto" />
    <fragment
        android:id="@+id/nav_galeria"
        android:name="com.qbo.appfak2funcionesfirebase.GaleriaFragment"
        android:label="@string/valnavgaleria"
        tools:layout="@layout/fragment_galeria" />
    <fragment
        android:id="@+id/nav_registro_persona"
        android:name="com.qbo.appfak2funcionesfirebase.RegistroFragment"
        android:label="@string/valnavregistropersona"
        tools:layout="@layout/fragment_registro" />
    <fragment
        android:id="@+id/nav_lista_persona"
        android:name="com.qbo.appfak2funcionesfirebase.ListaPersonaFragment"
        android:label="@string/valnavlistapersona"
        tools:layout="@layout/fragment_lista_persona" />
</navigation>